syntax = "proto3";

package e2e.corner_cases;

option go_package = "github.com/casnerano/protoc-gen-go-guard/e2e/grpc/pb/corner_cases";

import "google/protobuf/empty.proto";
import "proto/guard.proto";

// Service with role-based access rules.
service MixedTypesAccess {
  // Override default rules: allow for admin role with at least one matching.
  option (guard.service_rules) = {
    authenticated_access: {
      role_based: {
        roles: ["admin"],
        match: AT_LEAST_ONE
      }
    }
  };

  // Call with override rules.
  rpc OverrideWithPolicies(google.protobuf.Empty) returns (google.protobuf.Empty) {
    // Override inherited rules: allow for policies with all matching.
    option (guard.method_rules) = {
      authenticated_access: {
        policy_based: {
          policies: ["positive-policy-1"],
          match: ALL
        }
      }
    };
  };


  // Call with override rules.
  rpc OverrideWithRoles(google.protobuf.Empty) returns (google.protobuf.Empty) {
    // Override inherited rules: allow for admin role with all matching.
    option (guard.method_rules) = {
      authenticated_access: {
        role_based: {
          roles: ["admin"],
          match: ALL
        }
      }
    };
  };

  // Call with override rules.
  rpc OverrideWithAuthentication(google.protobuf.Empty) returns (google.protobuf.Empty) {
    // Override inherited rules: require authenticated only.
    option (guard.method_rules) = { require_authentication: true };
  };
}